# convertchain

./: .dockerignore  .env.example  .gitattributes  .gitignore  DELIVERY_COMPLETE.md  README.md  docker-compose.staging.yml  docker-compose.yml
docs/: IMPLEMENTATION_SUMMARY.md  QUICK_OPERATIONS_GUIDE.md  blockchain-deposit-monitoring.md  compliance-admin-api.md  compliance-go-live-checklist.md  compliance-operations-runbook.md  local-stack.md  openapi.yaml  provider-readiness-runbook.md
go-engine/: go.mod  go.sum
python-bot/: .coverage  .env.example  README.md  pyproject.toml  test_webhook_sign.py  trade.py
python-bot/app/: config.py  main.py
python-bot/app/channels/: telegram.py  whatsapp.py
python-bot/app/flows/: account_control.py  admin_ops.py  bank.py  onboarding.py  router.py  trade.py
python-bot/app/middleware/: webhook_validator.py
python-bot/app/providers/: __init__.py  base.py  meta_whatsapp.py  openclaw_relay.py  telegram_direct.py  types.py
python-bot/app/services/: engine_client.py  message_runtime.py  openclaw_gateway.py  replay_guard.py  scoped_session.py  session.py
python-bot/tests/: test_bank.py  test_message_runtime.py  test_onboarding.py  test_provider_adapters.py  test_router.py  test_trade.py  test_trade_hardening.py
scripts/: bootstrap_vault_dev.ps1  bootstrap_vault_dev.sh  classify_dirty_files.sh  enable_branch_protection.sh  migrate.ps1  migrate.sh  precheck_rollout_flags.ps1  precheck_rollout_flags.sh  smoke_local_stack.ps1  smoke_local_stack.sh
tmp/: debug-bank-topup.json  debug-payout.json  manual-payout.json  (+1 more)
(+128 files in other folders)
